crates/plotnik-lib/tests/04-emit/linking/supertype_in_alternation_rejected.txt
Q = [
  (expression#statement_block)
  (identifier)
]
==== diagnostics ====
error: matching the `expression#` supertype is not supported yet
 --> query.ptk:2:4
  |
2 |   (expression#statement_block)
  |    ^^^^^^^^^^
  |
help: match the concrete subtypes with an alternation, e.g. `[(a) (b)]`
help: subtypes of `expression`: `assignment_expression`, `augmented_assignment_expression`, `await_expression`, `binary_expression`, `jsx_element`, `jsx_self_closing_element`, `new_expression`, `primary_expression`, ... (4 more)
